--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "8.2",
+        "doctrine/annotations": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "symfony/property-access": "^6.3",
+        "symfony/serializer": "^v6.3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
